# AI-Voice-Power

./: .gitignore  .mxproject  AXK_AiPowerSupply.ioc  AXK_AiPowerSupply_nine.ioc  CMakeLists.txt  README.md  openocd.cfg  引脚连接与功能映射表.md
Bsp/: CMakeLists.txt
Bsp/delay/: stm32f10x_delay.c  stm32f10x_delay.h
Bsp/i2c/: axk_bsp_i2c.c  axk_bsp_i2c.h  stm32f10x_bsp_i2c.c  stm32f10x_bsp_i2c.h
Bsp/spi/: stm32f10x_bsp_spi.c  stm32f10x_bsp_spi.h
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: freertos.c  gpio.c  main.c  stm32f1xx_it.c  usart.c
components/: CMakeLists.txt  emMCP_config.h
components/INA226/: axk_ina226.c  axk_ina226.h  ina226.c  ina226.h
components/KEY/: Key.c  Key.h  axk_key.c  axk_key.h
components/PWR/: PWR_Ctl.c  PWR_Ctl.h  axk_pwr_ctl.c  axk_pwr_ctl.h
components/SSD1306/: axk_ssd1306.c  axk_ssd1306.h  axk_ssd1306_font.h
components/SSD1306/gt20l16s/: axk_gt20l16s.c  axk_gt20l16s.h
components/app/: axk_app.c  axk_app.h
components/ch224/: axk_ch224.c  axk_ch224.h
components/log/: axk_log.c  axk_log.h  log.c  log.h
docs/: AI模组提示词.md  编码规范.md
emMCP/: CMakeLists.txt
emMCP/port/: README_PORT.md  uartPort.c  uartPort.h
emMCP/uart-mcp/: emMCP.c  emMCP.h  emMCPLOG.h
emMCP/uart-mcp/cJSON/: cJSON.c  cJSON.h
