cmake_minimum_required(VERSION 3.22)

add_library(components INTERFACE)

file(GLOB COMPONENT_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c
${CMAKE_CURRENT_SOURCE_DIR}/log/*.c
${CMAKE_CURRENT_SOURCE_DIR}/KEY/*.c
${CMAKE_CURRENT_SOURCE_DIR}/INA226/*.c
${CMAKE_CURRENT_SOURCE_DIR}/PWR/*.c
${CMAKE_CURRENT_SOURCE_DIR}/ch224/*.c 
${CMAKE_CURRENT_SOURCE_DIR}/SSD1306/*.c
${CMAKE_CURRENT_SOURCE_DIR}/SSD1306/gt20l16s/*.c
)
target_sources(components INTERFACE ${COMPONENT_SRC_FILES})

target_include_directories(components INTERFACE 
${CMAKE_CURRENT_SOURCE_DIR}/log
${CMAKE_CURRENT_SOURCE_DIR}/KEY
${CMAKE_CURRENT_SOURCE_DIR}/INA226
${CMAKE_CURRENT_SOURCE_DIR}/PWR
${CMAKE_CURRENT_SOURCE_DIR}/ch224
${CMAKE_CURRENT_SOURCE_DIR}/SSD1306
${CMAKE_CURRENT_SOURCE_DIR}/SSD1306/gt20l16s
)
